--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -76,5 +76,5 @@
 
 // Modal Side Bar //
 @import "components/modalSideBar/tool-bar.scss";
-@import "components/modalSideBar/members.scss";
+@import "components/modalSideBar/members/members";
 
