--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -48,6 +48,11 @@
 // check list //
 
 @import "components/modalSideBar/checkList/check-list-modal";
+@import "components/modalSideBar/checkList/todo-preview";
+@import "components/modalSideBar/checkList/check-list-bar";
+@import "components/modalSideBar/checkList/check-list-preview";
+
+
 
 // labels // 
 
