--- a/frontend/src/assets/sass/components/modalSideBar/checkList/_check-list-preview.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/checkList/_check-list-preview.scss
@@ -1,8 +1,8 @@
 .checklist-container {
-    width: 445px;
-    margin-bottom: 13px;
+  width: 445px;
+  margin-bottom: 13px;
 
-    .add-todo-btn {
+  .add-todo-btn {
     color: #172b4d;
     background-color: #eaecf0;
     border: none;
@@ -16,9 +16,27 @@
     outline: none;
 
     &:hover {
-        opacity: 0.9;
-        color: #091e42;
-        background: #e2e4e9;
+      opacity: 0.9;
+      color: #091e42;
+      background: #e2e4e9;
     }
+  }
+}
+
+.add-todo-form {
+  .add-todo-txt {
+    background-color: #fafbfc;
+    border: none;
+    box-shadow: inset 0 0 0 2px #dfe1e6;
+    margin: 0;
+    margin: 0px;
+    padding: 6px 8px;
+    font-size: 13px;
+    color: #172b4d;
+
+    &:focus {
+        background-color: #fff;
+        box-shadow: inset 0 0 0 2px #0079bf;
     }
+  }
 }
