--- a/frontend/src/assets/sass/components/taskModal/_modal-main.scss
+++ b/frontend/src/assets/sass/components/taskModal/_modal-main.scss
@@ -14,5 +14,9 @@
         font-family: montserrat, sans-serif;
         cursor: pointer;
     }
+
+    .add-comment-margin {
+      margin-bottom: 48px;
+    }
   }
 }
