--- a/frontend/src/assets/sass/views/_taskDetails.scss
+++ b/frontend/src/assets/sass/views/_taskDetails.scss
@@ -1,6 +1,8 @@
 
   .task-modal-container {
     width: 750px;
+    height: 585px;
+    overflow: auto;
     background-color: #f4f5f7;
     margin: auto;
     border-radius: 4px;
