--- a/frontend/src/assets/sass/components/modalComment/_modalCommentList.scss
+++ b/frontend/src/assets/sass/components/modalComment/_modalCommentList.scss
@@ -1,8 +1,10 @@
 .modal-comment-container{
    margin-top: 20px;
-
+   height: 250px;
+   overflow: auto;
 
    li{
        min-height: 50px;
+       margin-bottom: 15px;
    }
 }
