--- a/frontend/src/assets/sass/components/topic/_topicPreview.scss
+++ b/frontend/src/assets/sass/components/topic/_topicPreview.scss
@@ -18,6 +18,7 @@
       border-radius: 4px;
       min-height: 14px;
       padding: 5px 6px;
+      word-break: break-all;
 
       &:focus {
         background: #fff;
