--- a/frontend/src/assets/sass/components/modalSideBar/_tool-bar.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/_tool-bar.scss
@@ -5,6 +5,8 @@
   z-index: 10;
   text-align: left;
   margin-top: -45px;
+  margin-left: 13px;
+  
   & h3 {
     color: #5e6c84;
     font-size: 12px;
