--- a/frontend/src/assets/sass/components/taskModal/_modal-header.scss
+++ b/frontend/src/assets/sass/components/taskModal/_modal-header.scss
@@ -1,20 +1,29 @@
 .modal-header {
-    margin: 0px 265px 10px 0;
-    min-height: 32px;
+  margin: 0px 265px 10px 0;
+  min-height: 32px;
 
-    .title {
-      font-size: 21px;
-      padding: 0 10px;
-      border-radius: 4px;
-    }
+  .title {
+    font-size: 21px;
+    padding: 0 10px;
+    border-radius: 4px;
+  }
 
+  .small-title {
+    color: #616c80c2;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 185px;
+    height: 1.2em;
+    white-space: nowrap;
+    
     small {
-      color: #616c80c2;
+      
       font-size: 12px;
       padding-left: 10px;
 
-      .bottom-line{
-          text-decoration-line: underline;
+      .bottom-line {
+        text-decoration-line: underline;
       }
     }
   }
+}
