--- a/frontend/src/assets/sass/views/_home-page.scss
+++ b/frontend/src/assets/sass/views/_home-page.scss
@@ -23,9 +23,12 @@
 }
 
 .info {
-  margin: 155px 0 155px 300px;
-  color: #f1f3ff;
-  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+    color: #f1f3ff;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 @keyframes grow {
@@ -95,6 +98,4 @@
 .home-section-desc {
   font-size: 2.3rem;
 }
-.home-section-title {
-  margin-left: 30px;
-}
+
