--- a/frontend/src/assets/sass/components/modalSideBar/members/_members.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/members/_members.scss
@@ -33,17 +33,15 @@
 }
 
 .members-on-task-title {
-  margin-top: -30px;
+  margin-top: -30px; 
   color: #172b4d;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: 0.04em;
   line-height: 16px;
-  margin-top: 16px;
   text-transform: uppercase;
-  display: block;
   line-height: 20px;
-  margin: 0 8px 4px 0;
+  margin: 9px 0px 4px 2px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
