--- a/frontend/src/assets/sass/components/modalSideBar/checkList/_check-list-preview.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/checkList/_check-list-preview.scss
@@ -9,7 +9,7 @@
     border-radius: 4px;
     cursor: pointer;
     height: 32px;
-    margin-top: 8px;
+    margin: 6px 0 2px 0;
     padding: 6px 13px;
     position: relative;
     transition: ease all 0.2s;
@@ -39,4 +39,8 @@
         box-shadow: inset 0 0 0 2px #0079bf;
     }
   }
+}
+
+.checklist-header {
+  margin-bottom: 10px;
 }
