--- a/frontend/src/assets/sass/components/modalSideBar/checkList/_todo-preview.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/checkList/_todo-preview.scss
@@ -1,10 +1,15 @@
 .todo-container {
   font-size: 14px;
   color: #5e6c84;
-  padding: 6px 0;
+  padding: 6px 5px;
+  transition: ease 0.4s;
+  cursor: pointer;
 
   .todo-txt {
     padding: 2px 8px;
+    width: 375px;
+    margin-left: 5px;
+    cursor: text;
     &:focus {
       background-color: #fff;
       box-shadow: inset 0 0 0 2px #0079bf;
@@ -25,6 +30,7 @@
     display: inline-block;
     position: relative;
     outline: none;
+    cursor: pointer;
 
     &:active,
     &:checked:active {
@@ -45,5 +51,19 @@
       left: 3px;
       color: #fff;
     }
+  }
+
+&:hover {
+  background-color: #80808017;
+  border-radius: 7px;
+}
+
+  &:hover .icon-trash {
+    display: block;
+    padding: 0px 5px;
+  }
+
+  .icon-trash {
+    display: none;
   }
 }
