--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -70,13 +70,13 @@
 @import "components/modalSideBar/dueTime/due-time";
 
 // // // Pages
-// @import "views/home-page.scss";
-// @import "views/TopicPage.scss";
-// @import "views/authPage.scss";
-// @import "views/taskDetails.scss";
-// @import "views/aboutPage.scss";
-// @import "views/boardPage.scss";
+@import "views/home-page.scss";
+@import "views/TopicPage.scss";
+@import "views/authPage.scss";
+@import "views/taskDetails.scss";
+@import "views/aboutPage.scss";
+@import "views/boardPage.scss";
 
-// // Modal Side Bar //
-// @import "components/modalSideBar/tool-bar.scss";
+// Modal Side Bar //
+@import "components/modalSideBar/tool-bar.scss";
 
