--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -21,14 +21,14 @@
 @import "components/footer.scss";
 
 // // board header
-@import "components/boardHeader/board-header";
-@import "components/boardHeader/board-member-list";
-@import "components/boardHeader/search-users";
+@import "components/boardHeader/board-header.scss";
+@import "components/boardHeader/board-member-list.scss";
+@import "components/boardHeader/search-users.scss";
 
 // // topic
-@import "components/topic/topicList";
-@import "components/topic/topicPreview";
-@import "components/topic/addTopic";
+@import "components/topic/topicList.scss";
+@import "components/topic/topicPreview.scss";
+@import "components/topic/addTopic.scss";
 
 // // task
 @import "components/task/taskList.scss";
@@ -46,14 +46,14 @@
 @import "components/modalSideBar/action-bar.scss";
 
 // // modalComment // 
-@import "components/modalComment/modalCommentList";
-@import "components/modalComment/modalCommentPreview";
+@import "components/modalComment/modalCommentList.scss";
+@import "components/modalComment/modalCommentPreview.scss";
 
 // // check list //
-@import "components/modalSideBar/checkList/check-list-modal";
-@import "components/modalSideBar/checkList/todo-preview";
-@import "components/modalSideBar/checkList/check-list-bar";
-@import "components/modalSideBar/checkList/check-list-preview";
+@import "components/modalSideBar/checkList/check-list-modal.scss";
+@import "components/modalSideBar/checkList/todo-preview.scss";
+@import "components/modalSideBar/checkList/check-list-bar.scss";
+@import "components/modalSideBar/checkList/check-list-preview.scss";
 
 // // labels // 
 @import "components/modalSideBar/labels/label-modal.scss";
@@ -64,19 +64,21 @@
 @import "components/modalSideBar/taskColor/task-color-preview.scss";
 
 // // members // 
-@import "components/modalSideBar/members/members";
+@import "components/modalSideBar/members/members.scss";
 
 // // Due Time //
-@import "components/modalSideBar/dueTime/due-time";
+@import "components/modalSideBar/dueTime/due-time.scss";
 
 // // // Pages
 @import "views/home-page.scss";
-@import "views/TopicPage.scss";
-@import "views/authPage.scss";
-@import "views/taskDetails.scss";
-@import "views/aboutPage.scss";
-@import "views/boardPage.scss";
+// @import "views/TopicPage.scss";
+//prob
+// @import "views/authPage.scss";
+// @import "views/taskDetails.scss";
+//prob
+// @import "views/aboutPage.scss";
+// @import "views/boardPage.scss";
 
-// Modal Side Bar //
-@import "components/modalSideBar/tool-bar.scss";
+// // Modal Side Bar //
+// @import "components/modalSideBar/tool-bar.scss";
 
