--- a/frontend/src/assets/sass/views/_home-page.scss
+++ b/frontend/src/assets/sass/views/_home-page.scss
@@ -13,8 +13,10 @@
   top: 0;
   left: 0;
   backface-visibility: hidden;
-  transform: translateZ(0);
-  background: #1b2030 url("https://images.pexels.com/photos/3183151/pexels-photo-3183151.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") 50% 0 no-repeat;
+  transform: translateZ(0); 
+  background-image: url("./img.jpeg");
+  background-repeat: no-repeat;
+  // background-position: 50% 0;
   background-size: 100%;
   background-attachment: fixed;
   animation: grow 190s linear 10ms infinite;
@@ -92,7 +94,7 @@
   color: white;
   height: 40vh;
   opacity: 0.8;
-  background: url("../../images/section.jpg") fixed center;
+  // background: url(../../images/section.jpg) fixed center;
   background-size: cover;
   padding: 30px;
 }
