--- a/frontend/src/assets/sass/components/modalSideBar/_tool-bar.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/_tool-bar.scss
@@ -76,6 +76,7 @@
     text-overflow: ellipsis;
     transition: ease all 0.2s;
     outline: none;
+    line-height: 15px;
     position: relative;
 
     &:hover {
