--- a/frontend/src/assets/sass/views/_boardPage.scss
+++ b/frontend/src/assets/sass/views/_boardPage.scss
@@ -1,15 +1,8 @@
 .board-page-container {
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-overflow:hidden !important;
-  background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmNBRGm6_hAnQ-Eereq8XsOBiLyGWSWhuNI1--WZYU2D1P4D7zmQ&s)
-    fixed center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  h1 {
-    font-size: rem(30px);
-    text-align: center;
+  h3 {
+    font-size: 16px;
+    font-weight: 700;
+    text-align: start;
   }
 }
 
@@ -32,28 +25,20 @@ overflow:hidden !important;
 }
 
 .add-board-btn {
-  outline: none;
-  font-weight: 600;
-  letter-spacing: 2px;
-  transition: all 0.3s ease;
-  padding: 0.4rem 1rem;
-  cursor: pointer;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  background-color: black;
-  color: white;
+  background-color: rgba(9, 30, 66, 0.04);
+  box-shadow: none;
   border: none;
+  color: #172b4d;
+  display: table-cell;
+  height: 80px;
+  font-weight: 400;
+  text-align: center;
+
   &:hover {
     background-color: rgba(0, 0, 0, 0.781);
   }
-  margin-bottom: 30px;
 }
 
 .boards-container {
-  overflow-y: scroll;
-  width: 100%;
   flex-wrap: wrap;
-  margin-left: 7rem;
-  margin-right: 7rem;
 }
