--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -19,6 +19,9 @@
 @import "components/menu.scss";
 @import "components/bg-gallery.scss";
 @import "components/footer.scss";
+@import "components/msgModal.scss";
+@import "components/screen.scss";
+
 
 // // board header
 @import "components/boardHeader/board-header";
