--- a/frontend/src/assets/sass/views/_boardPage.scss
+++ b/frontend/src/assets/sass/views/_boardPage.scss
@@ -7,17 +7,34 @@
 }
 
 .board-container {
-  max-width: 250px;
+  position: relative;
+  background-color: #000;
+  max-width: 230px;
   cursor: pointer;
   margin: 10px;
+  border-radius: 3px;
 
   h4 {
-    text-align: center;
+    position: absolute;
+    font-size: 14px;
+    font-weight: 700;
+    z-index: 20;
+    color: #fff;
+    top: 7px;
+    left: 9px;
   }
   img {
-    width: 250px;
-    height: 160px;
+    width: 230px;
+    height: 100px;
     transition: all ease 0.4s;
+    border-radius: 3px;
+    opacity: 0.9;
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+  div {
+    opacity: 0.9;
     &:hover {
       opacity: 0.8;
     }
@@ -25,17 +42,17 @@
 }
 
 .add-board-btn {
-  background-color: rgba(9, 30, 66, 0.04);
-  box-shadow: none;
+  background-color: rgba(9, 30, 66, 0.06);
   border: none;
   color: #172b4d;
-  display: table-cell;
-  height: 80px;
-  font-weight: 400;
+  height: 100px;
+  width: 230px;
   text-align: center;
+  cursor: pointer;
+  outline: none;
 
   &:hover {
-    background-color: rgba(0, 0, 0, 0.781);
+    background-color: rgba(9, 30, 66, 0.15);
   }
 }
 
