--- a/frontend/src/assets/sass/basics/_icons.scss
+++ b/frontend/src/assets/sass/basics/_icons.scss
@@ -66,3 +66,7 @@
     font-family: iconmoon;
     content: "\ea40";
   }
+  .icon-user:before {
+    font-family: iconmoon;
+    content: "\e971";
+  }
