--- a/frontend/src/assets/sass/views/_authPage.scss
+++ b/frontend/src/assets/sass/views/_authPage.scss
@@ -1,4 +1,10 @@
-
+.auth-container{
+  top: 0;
+  position: absolute;
+  width:100%;
+  height: 100vh;
+  background-color:#324c66e3;
+}
 .form {
 
   input, button {
@@ -40,6 +46,11 @@ $diffRatio: ($contW - $imgW) / $contW;
   margin: 0 auto 100px;
   background: #fff;
   margin-top: 84px;
+  
+  @include for-normal-layout {
+  margin:0;
+}
+
 }
 
 .form {
