--- a/frontend/src/assets/sass/views/_boardPage.scss
+++ b/frontend/src/assets/sass/views/_boardPage.scss
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
 overflow:hidden !important;
-  background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmNBRGm6_hAnQ-Eereq8XsOBiLyGWSWhuNI1--WZYU2D1P4D7zmQ&s)
+  background: url(https://i.pinimg.com/originals/f1/47/2f/f1472f334b2df7c0002176ddf26ca638.jpg)
     fixed center;
   background-size: cover;
   background-repeat: no-repeat;
