--- a/frontend/src/assets/sass/views/_boardPage.scss
+++ b/frontend/src/assets/sass/views/_boardPage.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: auto;
 
   .board-page-title {
     color: #f2f2f2;
