--- a/frontend/src/assets/sass/views/url.css
+++ b/frontend/src/assets/sass/views/url.css
@@ -2,8 +2,12 @@
   background-image: url("../../images/login-bg.jpg");
 }
 
-.home-page-section {
-  background: url("../../images/section.jpg") fixed center;
+.home-page-section-1 {
+  background: url("https://kanbanize.com/wp-content/themes/kanbanize/img/workflows_background_medium_green.jpg") fixed center;
+}
+
+.home-page-section-2 {
+  background: url("https://kanbanize.com/wp-content/themes/kanbanize/img/main-section-1-bg.jpg") fixed center;
 }
 
 .home-page-header:before {
