--- a/frontend/src/assets/sass/components/_footer.scss
+++ b/frontend/src/assets/sass/components/_footer.scss
@@ -1,9 +1,11 @@
 .footer {
-  border-top: 1px solid black;
-  height: 5vh;
-  background-color: #232323;
-  padding: 90px 0;
-  width: 100%;
+  height: 250px;
+    background-color: #24242c;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .copy-rights {
