--- a/frontend/src/assets/sass/components/modalComment/_modalCommentPreview.scss
+++ b/frontend/src/assets/sass/components/modalComment/_modalCommentPreview.scss
@@ -12,8 +12,11 @@
 }
 
 .user-comment {
-    margin-left: 51px;
-    font-size: 14px;
-    color: #41516e;
-    line-height: 10px;
+  margin-left: 51px;
+  font-size: 14px;
+  color: #41516e;
+  line-height: 10px;
+  max-width: 300px;
+  word-break: break-all;
+  padding-right: 10px;
 }
