--- a/frontend/src/assets/sass/views/_home-page.scss
+++ b/frontend/src/assets/sass/views/_home-page.scss
@@ -1,7 +1,7 @@
 .home-page-header {
   position: relative;
   overflow: hidden;
-  height: 80vh;
+  height: 100vh;
   color: #eee;
 }
 
@@ -39,35 +39,15 @@
   }
 }
 
-.home-page-templates {
-  margin-left: 200px;
-  margin-right: 200px;
-}
-
-.home-template-title {
-  font-size: 20px;
-  text-align: left;
-  padding: 15px 0;
-  color: $clr1;
-  font-weight: 600;
-}
-
-.templates-container {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.single-template {
-  cursor: pointer;
-  padding: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  background-size: contain;
-  width: calc(100% / 3);
-  &:hover {
-    opacity: 0.8;
-  }
+.home-section-info{
+  background-color: #fff;
+  height: 370px;
+  text-shadow: #02040c 1px 1px;
+  font-size: 4rem;
+  font-weight: 900;
+  font-family: Yanone-Regular;
+  color: #172b4d;
+  padding: 30px;
 }
 
 .home-page-title {
@@ -84,19 +64,15 @@
 }
 
 .home-page-section {
-  text-shadow: #02040c 1px 1px;
-  font-size: 4rem;
-  font-weight: 900;
-  font-family: Yanone-Regular;
-  color: white;
-  height: 40vh;
-  opacity: 0.8;
+  height: 500px;
   background-size: cover;
-  padding: 30px;
 }
 
 .home-section-desc {
-  font-size: 2.3rem;
+    font-size: 2.3rem;
+    width: 450px;
+    text-align: start;
+    margin-left: 30px;
 }
 
 
