--- a/frontend/src/assets/sass/components/taskModal/_modalComments.scss
+++ b/frontend/src/assets/sass/components/taskModal/_modalComments.scss
@@ -1,28 +1,34 @@
-[contentEditable=true]:empty:not(:focus):before{
-    content:attr(data-text)
+[contentEditable="true"]:empty:not(:focus):before {
+  content: attr(data-text);
 }
 
 .add-comment-container {
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    padding: 3px 11px;
-    background-color: #fff;
-    width: 445px;
-    border-radius: 4px;
-    box-shadow: 0 4px 8px -2px rgba(9,30,66,.25), 0 0 0 1px rgba(9,30,66,.08);
-    min-height: 80px;
+  @include for-normal-layout {
+    width: 300px;
+  }
+  @include for-mobile-layout {
+    width: 200px;
+  }
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  padding: 3px 11px;
+  background-color: #fff;
+  width: 445px;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px -2px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+  min-height: 80px;
 
-    .add-comment-txt{
-        outline: none;
-        color: #41516e;
-        font-family: montserrat, sans-serif;
-        cursor: text;
-        margin-bottom: 15px;
+  .add-comment-txt {
+    outline: none;
+    color: #41516e;
+    font-family: montserrat, sans-serif;
+    cursor: text;
+    margin-bottom: 15px;
 
-        .main-button {
-            margin-bottom: 15px;
-        }
+    .main-button {
+      margin-bottom: 15px;
     }
+  }
 }
