--- a/frontend/src/assets/sass/components/modalSideBar/labels/_label-modal.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/labels/_label-modal.scss
@@ -9,6 +9,12 @@
     border-radius: 5px;
     margin-top: 8px;
 
+    .icon-cross {
+      font-size: 11px;
+      top: 6px;
+      right: 11px;
+    }
+
     h3 {
       text-align: center;
       padding-bottom: 0.3rem;
