--- a/frontend/src/assets/sass/components/modalSideBar/_tool-bar.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/_tool-bar.scss
@@ -108,37 +108,6 @@
   }
 }
 
-.members-modal-input {
-  padding-bottom: 9px;
-  margin-bottom: -2px;
-  & > input {
-    -webkit-appearance: none;
-    outline: none;
-    background-color: #fafbfc;
-    border: none;
-    box-shadow: inset 0 0 0 2px #dfe1e6;
-    color: #172b4d;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    border-radius: 3px;
-    display: block;
-    line-height: 20px;
-    margin-bottom: -11px;
-    padding: 8px 12px;
-    transition-property: background-color, border-color, box-shadow;
-    transition-duration: 85ms;
-    transition-timing-function: ease;
-    width: 93%;
-    margin-left: auto;
-    margin-right: auto;
-    &:focus {
-      background: #fff;
-      border: none;
-      box-shadow: inset 0 0 0 2px #0079bf;
-    }
-  }
-}
-
 .members-modal {
   text-align: left;
   position: fixed;
@@ -147,6 +116,42 @@
   z-index: 9999;
   border-radius: 5px;
   margin-top: 8px;
+
+  .members-modal-input {
+    padding-bottom: 9px;
+    margin-bottom: -2px;
+    & > input {
+      -webkit-appearance: none;
+      outline: none;
+      background-color: #fafbfc;
+      border: none;
+      box-shadow: inset 0 0 0 2px #dfe1e6;
+      color: #172b4d;
+      box-sizing: border-box;
+      -webkit-appearance: none;
+      border-radius: 3px;
+      display: block;
+      line-height: 20px;
+      margin-bottom: -11px;
+      padding: 8px 12px;
+      transition-property: background-color, border-color, box-shadow;
+      transition-duration: 85ms;
+      transition-timing-function: ease;
+      width: 93%;
+      margin-left: auto;
+      margin-right: auto;
+      &:focus {
+        background: #fff;
+        border: none;
+        box-shadow: inset 0 0 0 2px #0079bf;
+      }
+    }
+    .icon-cross {
+      font-size: 11px;
+      top: 6px;
+      right: 11px;
+    }
+  }
 }
 
 .members-modal-input > h3 {
@@ -159,12 +164,6 @@
   border-bottom: 1px solid rgba(9, 30, 66, 0.13);
 }
 
-.close-member-modal {
-  position: absolute;
-  right: 14px;
-  top: 3px;
-  cursor: pointer;
-}
 #add-img {
   display: none;
 }
