--- a/frontend/src/assets/sass/components/modalSideBar/dueTime/_due-time.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/dueTime/_due-time.scss
@@ -1,30 +1,34 @@
 .due-modal-container {
   position: relative;
-}
-
-.due-time-modal {
-  position: fixed;
-  z-index: 999;
-  background-color: #fff;
-  width: 18rem;
-  border-radius: 5px;
-  margin-top: 8px;
-  height: 112px;
-  & > h3 {
-    box-sizing: border-box;
-    color: #5e6c84;
-    display: block;
-    line-height: 40px;
-    border-bottom: 1px solid rgba(9, 30, 66, 0.13);
-    margin: 0 12px;
-    overflow: hidden;
-    padding: 0 32px;
-    position: relative;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    z-index: 1;
-    text-align: center;
-    border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+  .due-time-modal {
+    position: fixed;
+    z-index: 999;
+    background-color: #fff;
+    width: 18rem;
+    border-radius: 5px;
+    margin-top: 8px;
+    height: 112px;
+    & > h3 {
+      box-sizing: border-box;
+      color: #5e6c84;
+      display: block;
+      line-height: 40px;
+      border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+      margin: 0 12px;
+      overflow: hidden;
+      padding: 0 32px;
+      position: relative;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      z-index: 1;
+      text-align: center;
+      border-bottom: 1px solid rgba(9, 30, 66, 0.13);
+    }
+    .icon-cross {
+      font-size: 11px;
+      top: 6px;
+      right: 11px;
+    }
   }
 }
 
