--- a/frontend/src/assets/sass/components/modalSideBar/labels/_label-modal.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/labels/_label-modal.scss
@@ -8,6 +8,29 @@
     width: 18rem;
     border-radius: 5px;
     margin-top: 8px;
+    @include for-middle-layout {
+      right: 0;
+    }
+    input {
+      outline: none;
+      background-color: #fafbfc;
+      border: none;
+      box-shadow: inset 0 0 0 2px #dfe1e6;
+      color: #172b4d;
+      box-sizing: border-box;
+      -webkit-appearance: none;
+      border-radius: 3px;
+      display: block;
+      line-height: 20px;
+      margin-bottom: -11px;
+      padding: 8px 12px;
+      transition-property: background-color, border-color, box-shadow;
+      transition-duration: 85ms;
+      transition-timing-function: ease;
+      width: 93%;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
     .icon-cross {
       font-size: 11px;
