--- a/frontend/src/assets/sass/setup/_mixins.scss
+++ b/frontend/src/assets/sass/setup/_mixins.scss
@@ -1,58 +1,64 @@
 /* Breakpoint mixins */
 
 @mixin for-mobile-layout {
-    @media (max-width: $mobile-breakpoint) {
-        @content;
-    }
+  @media (max-width: $mobile-breakpoint) {
+    @content;
+  }
 }
 
 @mixin for-narrow-layout {
-    @media (min-width: $mobile-breakpoint) {
-        @content;
-    }
+  @media (min-width: $mobile-breakpoint) {
+    @content;
+  }
 }
 
 @mixin for-normal-layout {
-    @media (max-width: $narrow-breakpoint) {
-        @content;
-    }
+  @media (max-width: $narrow-breakpoint) {
+    @content;
+  }
 }
 
 @mixin for-wide-layout {
-    @media (min-width: $normal-breakpoint) {
-        @content;
-    }
+  @media (min-width: $normal-breakpoint) {
+    @content;
+  }
+}
+
+@mixin for-middle-layout {
+  @media (max-width: $normal-breakpoint) {
+    @content;
+  }
 }
 
 /* Media  Mixins */
 @mixin aspect-ratio($width, $height) {
-    position: relative;
-    overflow: hidden;
-    &:before {
-      display: block;
-      content: "";
-      width: 100%;
-      padding-top: ($height / $width) * 100%;
-    }
-    > * {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-    }
-  
-    > img {
-      height: 100%;
-      object-fit: cover;
+  position: relative;
+  overflow: hidden;
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+  > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  > img {
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+// Mixin for removing hover efects on iphone screen
+@mixin hover-supported {
+  @media not all and (pointer: coarse) {
+    &:hover {
+      @content;
     }
   }
-  
-  // Mixin for removing hover efects on iphone screen
-  @mixin hover-supported {    
-    @media not all and (pointer: coarse) {
-        &:hover {
-            @content;
-        }
-    }
-  }
+}
