--- a/frontend/src/assets/sass/components/modalSideBar/checkList/_check-list-preview.scss
+++ b/frontend/src/assets/sass/components/modalSideBar/checkList/_check-list-preview.scss
@@ -2,6 +2,12 @@
   width: 445px;
   margin-bottom: 13px;
 
+  @include for-normal-layout {
+    width: 300px;
+  }
+  @include for-mobile-layout {
+    width: 230px;
+  }
   .add-todo-btn {
     color: #172b4d;
     background-color: #eaecf0;
@@ -34,8 +40,8 @@
     color: #172b4d;
 
     &:focus {
-        background-color: #fff;
-        box-shadow: inset 0 0 0 2px #0079bf;
+      background-color: #fff;
+      box-shadow: inset 0 0 0 2px #0079bf;
     }
   }
 }
