--- a/frontend/src/assets/sass/views/_authPage.scss
+++ b/frontend/src/assets/sass/views/_authPage.scss
@@ -3,7 +3,7 @@
   position: absolute;
   width:100%;
   height: 100vh;
-  background-color:#324c66e3;
+  background-color: #0000004a;
 }
 .form {
 
@@ -13,8 +13,6 @@
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   }
 }
-
-
 
 $contW: 900px;
 $imgW: 260px;
@@ -239,8 +237,8 @@ h2 {
 .form-input {
   display: block;
   width: 100%;
+  height: 25px;
   margin-top: 5px;
-  padding-bottom: 5px;
   font-size: 16px;
   border-bottom: 1px solid rgba(0,0,0,0.4);
   text-align: center;
