edited board page

--- a/frontend/src/assets/sass/basics/_icons.scss
+++ b/frontend/src/assets/sass/basics/_icons.scss
@@ -70,3 +70,8 @@
     font-family: iconmoon;
     content: "\e971";
   }
+
+  .icon-pencil2:before {
+    font-family: pencil;
+    content: "\e906";
+  }
