--- a/frontend/src/assets/sass/basics/_typography.scss
+++ b/frontend/src/assets/sass/basics/_typography.scss
@@ -7,6 +7,10 @@
   font-family: iconmoon;
   src: url(../../fonts/icomoon/fonts/icomoon.ttf);
 }
+@font-face {
+  font-family: pencil;
+  src: url(../../fonts/pencil/fonts/icomoon.ttf);
+}
 
 @font-face {
   font-family: DancingScript-Bold;
