--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -23,6 +23,9 @@
 @import "components/msgModal.scss";
 @import "components/screen.scss";
 
+// board edit //
+@import "components/boardEdit/boardEdit";
+
 // board header //
 @import "components/boardHeader/board-header";
 @import "components/boardHeader/board-member-list";
