--- a/frontend/src/assets/sass/global.scss
+++ b/frontend/src/assets/sass/global.scss
@@ -29,6 +29,7 @@
 // board header //
 @import "components/boardHeader/board-header";
 @import "components/boardHeader/board-member-list";
+@import "components/boardHeader/board-member-preview";
 @import "components/boardHeader/search-users";
 
 // topic //
